--- a/Solution/02_2839.md
+++ b/Solution/02_2839.md
@@ -1,1 +1,26 @@
+<img width="800" alt="default" src="https://user-images.githubusercontent.com/29402714/43264243-7465bbce-9120-11e8-87fd-c43e2eb35e98.png">
 
+``` java
+import java.util.Scanner;
+
+public class b02_2839 {
+
+	public static void main(String[] args) {
+		// TODO Auto-generated method stub
+		Scanner sc = new Scanner(System.in);
+		System.out.print("킬로그램 입력(3<=N<=5000) :");
+		int n = sc.nextInt();
+		int rest = 0;
+		if (n<=5) {
+			n = 1;
+		}else {
+			rest = n%5;
+			n /= 5;
+			if (rest<4) n++;
+			else  n = n+2;
+		}
+		System.out.println("최소 봉지 개수는 :"+n);
+	}
+
+}
+```
