--- a/04_4344.md
+++ b/04_4344.md
@@ -1,5 +1,43 @@
 <img width="1000" alt="default" src="https://user-images.githubusercontent.com/29402714/43265292-4ccf6a58-9123-11e8-9b54-da8cf97e8c20.png">
 
 ```java
+import java.util.Scanner;
+
+public class b04_4344 {
+
+	public static void main(String[] args) {
+		Scanner sc = new Scanner(System.in);
+		System.out.print("test case :");
+		int tcase = sc.nextInt();
+		int num, sum, count;
+		float avg;
+		int[] score;
+		
+		for (int i=0; i<tcase; i++) {
+			sum = 0;
+			count = 0;
+			System.out.print("학생 수 :");
+			num = sc.nextInt();
+			score = new int[num];
+			
+			for (int j=0; j<num; j++) {
+				System.out.print("과목 점수 :");
+				score[j] = sc.nextInt();
+				sum += score[j];
+			}
+			avg = sum/num;
+			System.out.println(avg);
+			for (int k=0; k<num; k++) {
+				if (score[k]>avg)
+					count++;
+				System.out.println(count);
+			}
+			System.out.print("평균 넘는 학생 :");
+			System.out.printf("%.3f",100.0*count/num);
+			System.out.println("%");
+		}
+	}
+
+}
 
 ```
