--- a/04_4344.md
+++ b/04_4344.md
@@ -4,8 +4,7 @@
 import java.util.Scanner;
 
 public class b04_4344 {
-
-	public static void main(String[] args) {
+	public static void student() {
 		Scanner sc = new Scanner(System.in);
 		System.out.print("test case :");
 		int tcase = sc.nextInt();
@@ -36,6 +35,10 @@ public class b04_4344 {
 			System.out.printf("%.3f",100.0*count/num);
 			System.out.println("%");
 		}
+	}
+	
+	public static void main(String[] args) {
+		student();
 	}
 
 }
