--- a/03_11721.md
+++ b/03_11721.md
@@ -1,1 +1,24 @@
+<img width="1000" alt="default" 
+src="https://user-images.githubusercontent.com/29402714/43456799-cb9bab50-94ff-11e8-92c3-200de37cee81.png">
 
+```java
+import java.util.Scanner;
+
+public class b03_11721 {
+	static void tenPrint() {
+		Scanner sc = new Scanner("BaekjoonOnlineJudge");
+		String input = sc.next();
+        sc.close();
+        
+        for (int i = 0; i < input.length(); ++i) {
+            System.out.print(input.charAt(i));
+            if (i%10 == 9) {
+                System.out.print("\n");
+            }
+        }		
+	}
+	public static void main(String[] args) {
+		tenPrint();
+	}
+}
+```
