--- a/04_1110.md
+++ b/04_1110.md
@@ -5,13 +5,13 @@ src="https://user-images.githubusercontent.com/29402714/43497463-4b42f69c-957d-1
 import java.util.Scanner;
 
 public class b04_1110 {
+// Cycle func
 	static void Cycle() {
 		System.out.print("숫자 : ");
 		Scanner sc = new Scanner(System.in);
 		int n = sc.nextInt();
 		int num = n;
 		int count = 0;
-		
 		do {
 			num = (num%10)*10 + (num/10 + num%10)%10;
 			System.out.println(num);
@@ -19,8 +19,32 @@ public class b04_1110 {
 		}while(num != n);
 		System.out.println(count);
 	}
+// Cycle2 func
+	static void Cycle2() {
+		System.out.print("숫자 : ");
+		Scanner sc = new Scanner(System.in);
+		int n = sc.nextInt();
+		int a, b, c;
+		sc.close();
+		int num = n;
+		int count = 0;
+		
+		while(true) {
+			a = num/10;
+			b = num%10;
+			c = a + b;
+			num = b*10 + c%10;
+			System.out.println(num);
+			count++;
+			if (num == n)
+				break;
+		}
+		System.out.println(count);
+	}
+// Main func
 	public static void main(String[] args) {
 		Cycle();
+		Cycle2();
 	}
 }
 ```
