--- a/04_4344.md
+++ b/04_4344.md
@@ -6,35 +6,36 @@ import java.util.Scanner;
 public class b04_4344 {
 	public static void student() {
 		Scanner sc = new Scanner(System.in);
-		System.out.print("test case :");
+		//System.out.print("test case :");
 		int tcase = sc.nextInt();
 		int num, sum, count;
 		float avg;
 		int[] score;
-		
+		System.out.println();
 		for (int i=0; i<tcase; i++) {
 			sum = 0;
 			count = 0;
-			System.out.print("학생 수 :");
+			//System.out.print("학생 수 :");
 			num = sc.nextInt();
 			score = new int[num];
 			
 			for (int j=0; j<num; j++) {
-				System.out.print("과목 점수 :");
+				//System.out.print("과목 점수 :");
 				score[j] = sc.nextInt();
 				sum += score[j];
 			}
 			avg = sum/num;
-			System.out.println(avg);
+			//System.out.println(avg);
 			for (int k=0; k<num; k++) {
 				if (score[k]>avg)
 					count++;
-				System.out.println(count);
+				//System.out.println(count);
 			}
-			System.out.print("평균 넘는 학생 :");
+			//System.out.print("평균 넘는 학생 :");
 			System.out.printf("%.3f",100.0*count/num);
 			System.out.println("%");
 		}
+		sc.close();
 	}
 	
 	public static void main(String[] args) {
@@ -42,5 +43,12 @@ public class b04_4344 {
 	}
 
 }
-
 ```
+
+Test case
+5 
+5 50 50 70 80 100 
+7 100 95 90 80 70 60 50 
+3 70 90 80 
+3 70 90 81 
+9 100 99 98 97 96 95 94 93 91
