--- a/05_1065.md
+++ b/05_1065.md
@@ -62,3 +62,23 @@ public class Main {
 	}
 }
 ```
+
+Junit Test case
+```java
+import static org.junit.jupiter.api.Assertions.*;
+
+import org.junit.jupiter.api.Test;
+
+class b05_1065Test {
+
+	@Test
+	void test() {
+		b05_1065 b05_1065Test = new b05_1065();
+		assertEquals(99, b05_1065Test.hanNum(99));
+		assertEquals(100, b05_1065Test.hanNum(111));
+		assertEquals(101, b05_1065Test.hanNum(123));
+		assertEquals(144, b05_1065Test.hanNum(1000));
+	}
+
+}
+```
