Junit Test Case

--- a/05_1065.md
+++ b/05_1065.md
@@ -63,7 +63,7 @@ public class Main {
 }
 ```
 
-Junit Test case
+Junit Test Case
 ```java
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -75,6 +75,7 @@ class b05_1065Test {
 	void test() {
 		b05_1065 b05_1065Test = new b05_1065();
 		assertEquals(99, b05_1065Test.hanNum(99));
+		assertEquals(99, b05_1065Test.hanNum(110));
 		assertEquals(100, b05_1065Test.hanNum(111));
 		assertEquals(101, b05_1065Test.hanNum(123));
 		assertEquals(144, b05_1065Test.hanNum(1000));
