--- a/05_1065.md
+++ b/05_1065.md
@@ -1,7 +1,7 @@
 <img width="1000" alt="default" 
 src="https://user-images.githubusercontent.com/29402714/43506689-c44daf64-95a5-11e8-99e5-f858b01bddc1.png">
 
-Test 1
+Code 1
 ```java
 import java.util.Scanner;
 
@@ -33,7 +33,7 @@ public class b05_1065 {
 	}
 }
 ```
-Test 2
+Code 2
 ```java
 import java.util.Scanner;
 
