--- a/04_1546.md
+++ b/04_1546.md
@@ -5,16 +5,17 @@ src="https://user-images.githubusercontent.com/29402714/43500232-73b25a0c-958a-1
 import java.util.Scanner;
 
 public class b04_1546 {
-	public static float Rescore(int[] x, int num) {
-		int max = x[0];
-		int sum = 0;
+	public static float Rescore(float[] x, int num) {
+		float max = x[0];
+		float sum = 0;
 		for (int i=1; i<num; i++) {
-			sum += x[i];
 			if (x[i]>max)
 				max = x[i];
 		}
-		for (int j=0; j<num; j++)
+		for (int j=0; j<num; j++) {
 			x[j]=x[j]/max*100;
+			sum += x[j];
+			System.out.println(x[j]);}
 		
 		float avg = sum/num;
 		
@@ -23,11 +24,11 @@ public class b04_1546 {
 	
 	public static void main(String[] args) {
 		Scanner sc = new Scanner(System.in);
-		System.out.print("과목 개수 :");
+		//System.out.print("과목 개수 :");
 		int num = sc.nextInt();
-		int[] score = new int[num];
+		float[] score = new float[num];
 		for (int i=0; i<num; i++) {
-			System.out.print("시험성적 :");
+			//System.out.print("시험성적 :");
 			score[i] = sc.nextInt();
 			}
 		
@@ -35,5 +36,4 @@ public class b04_1546 {
 		
 	}
 }
-
 ```
