--- a/04_1546.md
+++ b/04_1546.md
@@ -15,7 +15,7 @@ public class b04_1546 {
 		for (int j=0; j<num; j++) {
 			x[j]=x[j]/max*100;
 			sum += x[j];
-			System.out.println(x[j]);}
+			}
 		
 		float avg = sum/num;
 		
@@ -32,7 +32,7 @@ public class b04_1546 {
 			score[i] = sc.nextInt();
 			}
 		
-		System.out.printf("새로운 평균은 :%.2f",Rescore(score, num));
+		System.out.printf("%.2f",Rescore(score, num));
 		
 	}
 }
