--- a/05_1065.md
+++ b/05_1065.md
@@ -53,10 +53,10 @@ public class Main {
 		}
 	}
 	static int checkHan(int n) {
-		int i1 = n%10;
-		int i2 = n/10%10;
-		int i3 = n/100%10;
-		if (i2*2 == i1+i3)
+		int a1 = n%10;
+		int a2 = n/10%10;
+		int a3 = n/100%10;
+		if (a2*2 == a1+a3)
 			return 1;
 		return 0;
 	}
