--- a/05_1065.md
+++ b/05_1065.md
@@ -37,7 +37,7 @@ Code 2
 ```java
 import java.util.Scanner;
 
-public class Main {
+public class b05_1065 {
 	public static void main(String[] args) {
         Scanner sc = new Scanner(System.in);
         int n = sc.nextInt();
